@@ -1,0 +1,33 @@
+;Array with non-zero index lower bound
+
+in out a:array(2..10)
+in out b:byte
+
+const ca:array(5..10) = 5,6,7,8,9,10
+
+"## Set and get"
+a(3) = 3
+a(5) = 5
+b1 = a(3)
+b2 = a(5)
+"[b1],[b2]"
+;assert "3,5"
+
+"## Constant arrays"
+
+b1 = ca(7)
+b2 = ca(10)
+
+"[b1],[b2]"
+;assert "7,10"
+
+"## Address of array element"
+
+p:adr
+
+p = a(3)
+b1 = p(0)		; see how the indexing changed to 0 based
+b2 = p(2)
+
+"[b1],[b2]"
+;assert "3,5"
