@@ -2,6 +2,11 @@
 News
 ****
 
+===========
+19-Feb-2011
+===========
+
+- NEW: Support for non-zero based arrays
 - NEW: improved support for adr
 - OPT: Add instruction merging
 - OPT: Null jump elimination
